--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=mymanga
 
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
 spring.datasource.url=jdbc:postgresql://localhost:5433/mymanga
 spring.datasource.username=admin
 spring.datasource.password=admin
