feat: controllers criados e rotas todas definidas
as 3 classes controller estao criadas

--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -3,13 +3,14 @@ spring.application.name=mymanga
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/mymanga
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/mymanga
+spring.datasource.username=postgres
+spring.datasource.password=Mateus123#$@
 
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
-
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+logging.level.org.springframework.security=DEBUG
