--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -6,11 +6,17 @@ jwt.private.key=classpath:app.key
 spring.datasource.url=jdbc:postgresql://localhost:5432/mymanga
 spring.datasource.username=postgres
 spring.datasource.password=Mateus123#$@
-
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-server.error.include-stacktrace=never
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.springframework.security=DEBUG
+server.error.include-stacktrace=never
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=storemymanga@gmail.com
+spring.mail.password=yqxe mpxy zkkh rkoc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
