--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=mymanga
 
+spring.config.import=optional:file:./secrets.properties
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mymanga
-spring.datasource.username=postgres
-spring.datasource.password=Mateus123#$@
+spring.datasource.url=${db.url}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
@@ -17,6 +18,6 @@ server.error.include-stacktrace=never
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=storemymanga@gmail.com
-spring.mail.password=yqxe mpxy zkkh rkoc
+spring.mail.password=${mail.password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
