fix(api) : ajustado caminho das chaves RSA

--- a/mymanga/.gitignore
+++ b/mymanga/.gitignore
@@ -5,8 +5,8 @@ target/
 !**/src/test/**/target/
 .env
 secrets.properties
-app.key
-app.pub
+mymanga/src/main/resources/app.key
+mymanga/src/main/resources/app.pub
 
 # Compiled class file
 *.class
