--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=${db.url}
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
