--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.config.import=optional:file:./secrets.properties
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
+server.servlet.context-path=/my-manga
+
 spring.datasource.url=${db.url}
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
