--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.springframework.security=DEBUG
