--- a/mymanga/src/main/resources/application.properties
+++ b/mymanga/src/main/resources/application.properties
@@ -1,25 +1,7 @@
 spring.application.name=mymanga
 
-spring.config.import=optional:file:./secrets.properties
+spring.config.import=optional:file:./.env
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
 server.servlet.context-path=/my-manga
-
-spring.datasource.url=${db.url}
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
-server.port=8080
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
-spring.jpa.defer-datasource-initialization=true
-
-logging.level.org.springframework.security=DEBUG
-server.error.include-stacktrace=never
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=storemymanga@gmail.com
-spring.mail.password=${mail.password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
