--- a/mymanga/src/test/resources/application-test.properties
+++ b/mymanga/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=${TEST.DB.URL}
+spring.datasource.url=${TEST_DB_URL}
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=${TEST.DB.USERNAME}
-spring.datasource.password=${TEST.DB.PASSWORD}
+spring.datasource.username=${TEST_DB_USERNAME}
+spring.datasource.password=${TEST_DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
